ViewPager无限轮播--只是圆点、自动轮播、触摸事件和点击处理。

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="color_white">#FFFFFF</color>
     <color name="color_black">#000000</color>
     <color name="color_red">#FF0000</color>
+    <color name="color_gray">#d0d0d0</color>
     <color name="common_color">#1d2b56</color>
 </resources>
