--- a/app/src/main/res/layout/activity_banner.xml
+++ b/app/src/main/res/layout/activity_banner.xml
@@ -14,7 +14,17 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_banner"
             android:layout_width="match_parent"
-            android:layout_height="180dp"/>
+            android:layout_height="180dp" />
+
+        <LinearLayout
+            android:id="@+id/ll_banner_dot_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="6dp"
+            android:orientation="horizontal">
+
+        </LinearLayout>
 
     </FrameLayout>
 
