--- a/app/src/main/res/layout/layout_transformer_item.xml
+++ b/app/src/main/res/layout/layout_transformer_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/iv_page_img"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:src="@color/common_color"
+        android:layout_height="match_parent"
+        android:background="@color/common_color"
+        android:scaleType="centerCrop"
         />
 
 
